--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "newedenfaces",
-  "description": "Character voting app for EVE Online",
+  "name": "lasWeb",
+  "description": "Web server for BC3000 backend",
   "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sahat/newedenfaces-react"
+    "url": "https://github.com/bkcn/BC3000Web"
   },
   "main": "server.js",
   "scripts": {
@@ -13,7 +13,10 @@
     "postinstall": "bower install && gulp build"
   },
   "babel": {
-    "presets": ["es2015", "react"]
+    "presets": [
+      "es2015",
+      "react"
+    ]
   },
   "dependencies": {
     "alt": "^0.17.8",
@@ -21,7 +24,7 @@
     "body-parser": "^1.14.1",
     "colors": "^1.1.2",
     "compression": "^1.6.0",
-    "express": "^4.13.3",
+    "express": "^4.14.0",
     "history": "^1.13.0",
     "mongoose": "^4.2.5",
     "morgan": "^1.6.1",
@@ -36,11 +39,11 @@
     "xml2js": "^0.4.15"
   },
   "devDependencies": {
-    "babel-core": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-register": "^6.18.0",
-    "babelify": "^7.3.0",
+    "babel-core": "^6.1.19",
     "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-register": "^6.3.13",
+    "babelify": "^7.2.0",
     "bower": "^1.6.5",
     "browserify": "^12.0.1",
     "gulp": "^3.9.0",
@@ -57,5 +60,5 @@
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.0"
   },
-  "license": "MIT"
+  "license": "Beacon Co,.Ltd"
 }
