--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "body-parser": "^1.14.1",
     "colors": "^1.1.2",
     "compression": "^1.6.0",
+    "connect": "^2.30.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "history": "^1.13.0",
     "mongoose": "^4.2.5",
     "morgan": "^1.6.1",
@@ -33,6 +36,7 @@
     "react-router": "^1.0.0",
     "request": "^2.65.0",
     "serve-favicon": "^2.3.0",
+    "session-mongoose": "^0.5.2",
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
     "underscore": "^1.8.3",
